--- a/Resources/Prototypes/Entities/Mobs/Species/snail.yml
+++ b/Resources/Prototypes/Entities/Mobs/Species/snail.yml
@@ -2,7 +2,7 @@
   save: false
   name: Uristtsiru Mcshell
   parent: BaseMobSpeciesOrganic
-  id: BaseMobSnail
+  id: BaseMobGastropoid
   abstract: true
   components:
   - type: Absorbable
@@ -182,7 +182,7 @@
 
 - type: entity
   parent: BaseSpeciesDummy
-  id: MobSnailDummy
+  id: MobGastropoidDummy
   noSpawn: true
   components:
   - type: HumanoidAppearance
