Snixes part 3 and changelog update

--- a/Resources/Prototypes/GameRules/events.yml
+++ b/Resources/Prototypes/GameRules/events.yml
@@ -19,6 +19,8 @@
     - id: PowerGridCheck
     - id: SlimesSpawn
     - id: SolarFlare
+    - id: SnailMigration
+    - id: SnailMigrationLowPop
     - id: SpiderClownSpawn
     - id: SpiderSpawn
     - id: VentClog
@@ -327,9 +329,6 @@
   parent: BaseStationEventShortDelay
   components:
   - type: StationEvent
-    startAnnouncement: station-event-vent-creatures-start-announcement
-    startAudio:
-      path: /Audio/Announcements/attention.ogg
     weight: 6
     duration: 50
   - type: VentCrittersRule
@@ -346,9 +345,6 @@
   parent: BaseStationEventShortDelay
   components:
   - type: StationEvent
-    startAnnouncement: station-event-vent-creatures-start-announcement
-    startAudio:
-      path: /Audio/Announcements/attention.ogg
     earliestStart: 15
     weight: 6
     duration: 50
