--- a/Resources/Prototypes/Entities/Mobs/Player/silicon.yml
+++ b/Resources/Prototypes/Entities/Mobs/Player/silicon.yml
@@ -46,6 +46,8 @@
         type: GeneralStationRecordConsoleBoundUserInterface
       enum.SiliconLawsUiKey.Key:
         type: SiliconLawBoundUserInterface
+      enum.CommunicationsConsoleUiKey.Key:
+        type: CommunicationsConsoleBoundUserInterface
   - type: IntrinsicUI
     uis:
       enum.RadarConsoleUiKey.Key:
@@ -54,6 +56,11 @@
         toggleAction: ActionAIShowCrewMonitoring
       enum.GeneralStationRecordConsoleKey.Key:
         toggleAction: ActionAIShowStationRecords
+      enum.CommunicationsConsoleUiKey.Key:
+        toggleAction: ActionAIShowCommunications
+  - type: CommunicationsConsole
+    title: comms-console-announcement-title-station-ai
+    color: "#2ed2fd"
 
 
 # Ai
