--- a/Resources/Prototypes/Entities/Objects/Consumable/Food/Baked/donkpocket.yml
+++ b/Resources/Prototypes/Entities/Objects/Consumable/Food/Baked/donkpocket.yml
@@ -77,7 +77,9 @@
       food:
         reagents:
         - ReagentId: Nutriment
-          Quantity: 5
+          Quantity: 3
+        - ReagentId: THC
+          Quantity: 1
   - type: Sprite
     state: dank
 
@@ -96,9 +98,11 @@
       food:
         reagents:
         - ReagentId: Nutriment
-          Quantity: 10
+          Quantity: 8
         - ReagentId: Omnizine
-          Quantity: 4
+          Quantity: 2
+        - ReagentId: THC
+          Quantity: 5
 
 - type: entity
   name: spicy-pocket
