--- a/Resources/Prototypes/Entities/Objects/Consumable/Food/Baked/donkpocket.yml
+++ b/Resources/Prototypes/Entities/Objects/Consumable/Food/Baked/donkpocket.yml
@@ -112,9 +112,16 @@
   components:
   - type: FlavorProfile
     flavors:
-      - spicy
       - meaty
       - cheap
+  - type: SolutionContainerManager
+    solutions:
+      food:
+        reagents:
+        - ReagentId: Nutriment
+          Quantity: 3
+        - ReagentId: CapsaicinOil
+          Quantity: 1
   - type: Sprite
     state: plain
 
@@ -134,9 +141,11 @@
       food:
         reagents:
         - ReagentId: Nutriment
-          Quantity: 10
+          Quantity: 8
         - ReagentId: Omnizine
           Quantity: 2
+        - ReagentId: CapsaicinOil
+          Quantity: 4
   - type: Sprite
     state: spicy
 
