--- a/Resources/Prototypes/Entities/Objects/Consumable/Food/Baked/donkpocket.yml
+++ b/Resources/Prototypes/Entities/Objects/Consumable/Food/Baked/donkpocket.yml
@@ -160,6 +160,14 @@
       - meaty
       - sweet
       - cheap
+  - type: SolutionContainerManager
+    solutions:
+      food:
+        reagents:
+        - ReagentId: Nutriment
+          Quantity: 3
+        - ReagentId: TeriyakiSauce
+          Quantity: 1 
   - type: Sprite
     state: teriyaki
 
@@ -179,9 +187,11 @@
       food:
         reagents:
         - ReagentId: Nutriment
-          Quantity: 10
+          Quantity: 8
         - ReagentId: Omnizine
           Quantity: 2
+        - ReagentId: TeriyakiSauce
+          Quantity: 4 
 
 - type: entity
   name: pizza-pocket
