--- a/Resources/Prototypes/Entities/Objects/Consumable/Food/Baked/donkpocket.yml
+++ b/Resources/Prototypes/Entities/Objects/Consumable/Food/Baked/donkpocket.yml
@@ -145,7 +145,7 @@
         - ReagentId: Omnizine
           Quantity: 2
         - ReagentId: CapsaicinOil
-          Quantity: 4
+          Quantity: 5
   - type: Sprite
     state: spicy
 
@@ -191,7 +191,7 @@
         - ReagentId: Omnizine
           Quantity: 2
         - ReagentId: TeriyakiSauce
-          Quantity: 4 
+          Quantity: 5
 
 - type: entity
   name: pizza-pocket
@@ -250,9 +250,11 @@
       food:
         reagents:
         - ReagentId: Nutriment
-          Quantity: 5
+          Quantity: 3
         - ReagentId: Omnizine
           Quantity: 2
+        - ReagentId: JuiceBanana
+          Quantity: 1
   - type: Sprite
     state: banana
 
@@ -271,9 +273,11 @@
       food:
         reagents:
         - ReagentId: Nutriment
-          Quantity: 10
+          Quantity: 8
         - ReagentId: Omnizine
           Quantity: 2
+        - ReagentId: JuiceBanana
+          Quantity: 5
 
 - type: entity
   name: berry-pocket
