--- a/Resources/Prototypes/Entities/Objects/Devices/station_beacon.yml
+++ b/Resources/Prototypes/Entities/Objects/Devices/station_beacon.yml
@@ -24,6 +24,7 @@
   - type: NavMapBeacon
     defaultText: station-beacon-general
     color: "#D4D4D496"
+  - type: NavMapRegionSeed
   - type: WarpPoint
   - type: ActivatableUI
     key: enum.NavMapBeaconUiKey.Key
