--- a/Resources/Prototypes/Entities/Objects/Consumable/Food/Baked/donkpocket.yml
+++ b/Resources/Prototypes/Entities/Objects/Consumable/Food/Baked/donkpocket.yml
@@ -356,6 +356,8 @@
         - ReagentId: Omnizine
           Quantity: 2
 
+# random stonk pockets
+
 - type: entity
   name: carp-pocket
   parent: FoodDonkpocketBase
@@ -371,7 +373,9 @@
       food:
         reagents:
         - ReagentId: Nutriment
-          Quantity: 5
+          Quantity: 4
+        - ReagentId: Carpotoxin
+          Quantity: 0.5
   - type: Sprite
     state: carp
 
@@ -391,7 +395,9 @@
         - ReagentId: Nutriment
           Quantity: 10
         - ReagentId: Omnizine
-          Quantity: 2
+          Quantity: 3
+        - ReagentId: Carpotoxin
+          Quantity: 0.5
 
 - type: entity
   name: dink-pocket
