--- a/Resources/Prototypes/Entities/Objects/Consumable/Food/Baked/donkpocket.yml
+++ b/Resources/Prototypes/Entities/Objects/Consumable/Food/Baked/donkpocket.yml
@@ -231,7 +231,7 @@
       food:
         reagents:
         - ReagentId: Nutriment
-          Quantity: 15
+          Quantity: 13
         - ReagentId: Omnizine
           Quantity: 2
 
@@ -252,7 +252,7 @@
         - ReagentId: Nutriment
           Quantity: 3
         - ReagentId: Omnizine
-          Quantity: 2
+          Quantity: 1
         - ReagentId: JuiceBanana
           Quantity: 1
   - type: Sprite
@@ -275,9 +275,9 @@
         - ReagentId: Nutriment
           Quantity: 8
         - ReagentId: Omnizine
-          Quantity: 2
+          Quantity: 4
         - ReagentId: JuiceBanana
-          Quantity: 5
+          Quantity: 3
 
 - type: entity
   name: berry-pocket
@@ -374,7 +374,7 @@
         reagents:
         - ReagentId: Nutriment
           Quantity: 4
-        - ReagentId: Carpotoxin
+        - ReagentId: CarpoToxin
           Quantity: 0.5
   - type: Sprite
     state: carp
@@ -395,9 +395,9 @@
         - ReagentId: Nutriment
           Quantity: 10
         - ReagentId: Omnizine
-          Quantity: 3
-        - ReagentId: Carpotoxin
-          Quantity: 0.5
+          Quantity: 4
+        - ReagentId: CarpoToxin
+          Quantity: 1
 
 - type: entity
   name: dink-pocket
