--- a/Resources/Prototypes/Entities/Mobs/NPCs/space.yml
+++ b/Resources/Prototypes/Entities/Mobs/NPCs/space.yml
@@ -386,6 +386,7 @@
     description: ghost-role-information-snail-description
     rules: ghost-role-information-freeagent-rules
   - type: GhostTakeoverAvailable
+  - type: Emoting
   - type: Sprite
     drawdepth: SmallMobs
     sprite: Mobs/Animals/snail.rsi
