--- a/Resources/Prototypes/Entities/Structures/Doors/Airlocks/base_assembly.yml
+++ b/Resources/Prototypes/Entities/Structures/Doors/Airlocks/base_assembly.yml
@@ -29,7 +29,7 @@
     noRot: true
   - type: Damageable
     damageContainer: StructuralInorganic
-    damageModifierSet: Metallic
+    damageModifierSet: StructuralMetallicStrong
   - type: RCDDeconstructable
     cost: 6
     delay: 8
