--- a/Resources/Prototypes/Entities/Structures/Doors/SecretDoor/secret_door.yml
+++ b/Resources/Prototypes/Entities/Structures/Doors/SecretDoor/secret_door.yml
@@ -40,7 +40,7 @@
   - type: Airtight
   - type: Damageable
     damageContainer: StructuralInorganic
-    damageModifierSet: Metallic
+    damageModifierSet: StructuralMetallic
   - type: RCDDeconstructable
     cost: 6
     delay: 8
@@ -100,7 +100,7 @@
   - type: Rotatable
   - type: Damageable
     damageContainer: StructuralInorganic
-    damageModifierSet: Metallic
+    damageModifierSet: StructuralMetallic
   - type: RCDDeconstructable
     cost: 6
     delay: 8
