--- a/Resources/Prototypes/Entities/Structures/Furniture/altar.yml
+++ b/Resources/Prototypes/Entities/Structures/Furniture/altar.yml
@@ -10,7 +10,7 @@
   - type: Prayable
   - type: Damageable
     damageContainer: StructuralInorganic
-    damageModifierSet: Metallic
+    damageModifierSet: Wood
   - type: PlaceableSurface
   - type: Fixtures
     fixtures:
