--- a/Resources/Prototypes/Entities/Structures/Specific/Janitor/drain.yml
+++ b/Resources/Prototypes/Entities/Structures/Specific/Janitor/drain.yml
@@ -42,7 +42,7 @@
       solution: drainBuffer
     - type: Damageable
       damageContainer: StructuralInorganic
-      damageModifierSet: Metallic
+      damageModifierSet: StructuralMetallic
     - type: Destructible
       thresholds:
         - trigger:
