--- a/Resources/Prototypes/Entities/Structures/Power/smes.yml
+++ b/Resources/Prototypes/Entities/Structures/Power/smes.yml
@@ -79,7 +79,7 @@
       mediumVoltageNode: output
     - type: Damageable
       damageContainer: StructuralInorganic
-      damageModifierSet: StrongMetallic
+      damageModifierSet: StructuralMetallicStrong
     - type: BatterySensor
     - type: DeviceNetwork
       deviceNetId: AtmosDevices
