--- a/Resources/Prototypes/Entities/Structures/Specific/Anomaly/anomalies.yml
+++ b/Resources/Prototypes/Entities/Structures/Specific/Anomaly/anomalies.yml
@@ -887,19 +887,34 @@
     components:
     - type: InnerBodyAnomaly
       components:
+      - type: AmbientSound
+        volume: 5
+        range: 5
+        sound:
+          path: /Audio/Ambience/Objects/fireplace.ogg
       - type: Anomaly
-        keepEntity: true
-        corePrototype: AnomalyCoreShadow
-        coreInertPrototype: AnomalyCoreShadowInert
-        offset: "0.0,0.0"
+        corePrototype: AnomalyCorePyroclastic
+      - type: PointLight
+        radius: 1.3
+        energy: 2.5
+        color: "#E25822"
+        castShadows: false
+      - type: PyroclasticAnomaly
+      - type: TempAffectingAnomaly
+        tempChangePerSecond: 10
+        hotspotExposeTemperature: 500
+      - type: GasProducerAnomaly
+        releasedGas: 3
+        releaseOnMaxSeverity: true
+        spawnRadius: 4
+        tileCount: 5
+        tempChange: 420
       - type: ProjectileAnomaly
-        projectilePrototype: ProjectileIcicle
-      - type: EntitySpawnAnomaly
-        entries:
-        - settings:
-            spawnOnStabilityChanged: true
-            minAmount: 5
-            maxAmount: 15
-            maxRange: 4
-          spawns:
-          - IceCrust
+        projectilePrototype: ProjectileAnomalyFireball
+        projectileSpeed: 0.5
+        minProjectiles: 2
+        maxProjectiles: 4
+      - type: DamageOnAttacked
+        damage:
+          types:
+            Heat: 3
