--- a/Resources/Prototypes/Entities/Mobs/NPCs/animals.yml
+++ b/Resources/Prototypes/Entities/Mobs/NPCs/animals.yml
@@ -3318,10 +3318,6 @@
   components:
   - type: Body
     prototype: Mouse
-  - type: Speech
-    speechSounds: Squeak
-    speechVerb: SmallMob
-    allowedEmotes: ['Squeak']
   - type: Sprite
     drawdepth: SmallMobs
     sprite: Mobs/Animals/fish.rsi
@@ -3358,7 +3354,7 @@
   - type: MobThresholds
     thresholds:
       0: Alive
-      10: Critical
+      20: Critical
       20: Dead
   - type: MovementSpeedModifier
     baseWalkSpeed : 5
@@ -3367,8 +3363,6 @@
     states:
       Alive:
         Base: mouse-0
-      Critical:
-        Base: dead-0
       Dead:
         Base: splat-0
   - type: Extractable
@@ -3381,32 +3375,17 @@
           Quantity: 3
   - type: Butcherable
     spawned:
-    - id: FoodMeatRat
+    - id: FoodMeatFish
       amount: 1
-  - type: ReplacementAccent
-    accent: mouse
   - type: Tag
     tags:
-    - Trash
     - VimPilot
-    - ChefPilot
     - Meat
-  - type: Barotrauma
-    damage:
-      types:
-        Blunt: 0.1
-  - type: Vocal
-    sounds:
-      Male: Mouse
-      Female: Mouse
-      Unsexed: Mouse
-    wilhelmProbability: 0.001
   # TODO: Remove CombatMode when Prototype Composition is added
   - type: CombatMode
     combatToggleAction: ActionCombatModeToggleOff
   - type: Bloodstream
-    bloodMaxVolume: 50
-  - type: CanEscapeInventory
+    bloodMaxVolume: 30
   - type: MobPrice
     price: 50
   - type: BadFood
