--- a/Resources/Prototypes/Entities/Mobs/Species/vox.yml
+++ b/Resources/Prototypes/Entities/Mobs/Species/vox.yml
@@ -92,6 +92,9 @@
       sprite: "Effects/creampie.rsi"
       state: "creampie_vox" # Not default
       visible: false
+    - map: [ "inner_anomaly_layer" ] # Dynamically
+      shader: unshaded
+      visible: false
   - type: Inventory
     speciesId: vox
     displacements:
