Made the Armory Gun Safe craftable with 10 steel, 10 plasteel, and 5 LV cables.

--- a/Resources/Prototypes/Entities/Structures/Storage/Closets/Lockers/lockers.yml
+++ b/Resources/Prototypes/Entities/Structures/Storage/Closets/Lockers/lockers.yml
@@ -361,6 +361,11 @@
     stateDoorClosed: shotguncase_door
   - type: AccessReader
     access: [["Armory"]]
+  - type: Construction
+    graph: GunSafe
+    node: done
+    containers:
+    - entity_storage
 
 # Detective
 - type: entity
