--- a/Resources/Prototypes/Entities/Objects/Misc/books.yml
+++ b/Resources/Prototypes/Entities/Objects/Misc/books.yml
@@ -49,6 +49,7 @@
   id: BaseGuidebook
   abstract: true
   suffix: guidebook
+  components:
   - type: Sprite
     sprite: Objects/Misc/books.rsi
   - type: Tag
