--- a/Resources/Prototypes/Entities/Objects/Weapons/Guns/pneumatic_cannon.yml
+++ b/Resources/Prototypes/Entities/Objects/Weapons/Guns/pneumatic_cannon.yml
@@ -27,6 +27,7 @@
     soundEmpty:
       path: /Audio/Items/hiss.ogg
     clumsyProof: true
+    bigTrigger: true
   - type: ContainerAmmoProvider
     container: storagebase
   - type: PneumaticCannon
