--- a/Resources/Prototypes/Entities/Clothing/Hands/colored.yml
+++ b/Resources/Prototypes/Entities/Clothing/Hands/colored.yml
@@ -308,6 +308,7 @@
     spawned:
     - id: ClothingHandsGlovesFingerlessInsulated
   - type: Insulated
+    preventOpperatinGuns: true
   - type: Fiber
     fiberMaterial: fibers-insulative
     fiberColor: fibers-yellow
@@ -319,6 +320,8 @@
   name: budget insulated gloves
   description: These gloves are cheap knockoffs of the coveted ones - no way this can end badly.
   components:
+  - type: Insulated
+    preventOpperatinGuns: false
   - type: RandomInsulation
     # Why repeated numbers? So some numbers are more common, of course!
     list:
