added bigtrigger to PKA and piecanon

--- a/Resources/Prototypes/Entities/Objects/Weapons/Guns/Basic/base_pka.yml
+++ b/Resources/Prototypes/Entities/Objects/Weapons/Guns/Basic/base_pka.yml
@@ -22,6 +22,7 @@
     - SemiAuto
     soundGunshot:
       path: /Audio/Weapons/Guns/Gunshots/kinetic_accel.ogg
+    bigTrigger: true
   - type: AmmoCounter
   - type: Appearance
   - type: GenericVisualizer
