Changed gun safe price to 335, to match the cost of its material components. Changed gun safe to start with no accesses when constructed.

--- a/Resources/Prototypes/Entities/Structures/Storage/Closets/Lockers/lockers.yml
+++ b/Resources/Prototypes/Entities/Structures/Storage/Closets/Lockers/lockers.yml
@@ -350,7 +350,7 @@
     access: [["Security"]]
 
 - type: entity
-  id: GunSafe
+  id: GunSafeBase
   parent: LockerBaseSecure
   name: gun safe
   components:
@@ -360,12 +360,20 @@
     stateDoorOpen: shotguncase_open
     stateDoorClosed: shotguncase_door
   - type: AccessReader
-    access: [["Armory"]]
   - type: Construction
-    graph: GunSafe
+    graph: GunSafeBase
     node: done
     containers:
     - entity_storage
+  - type: StaticPrice
+    price: 335
+
+- type: entity
+  id: GunSafeBaseSecure
+  parent: GunSafeBase
+  components:
+  - type: AccessReader
+    access: [["Armory"]]
 
 # Detective
 - type: entity
