--- a/Resources/Prototypes/Entities/Structures/Specific/Anomaly/anomalies.yml
+++ b/Resources/Prototypes/Entities/Structures/Specific/Anomaly/anomalies.yml
@@ -896,6 +896,7 @@
         sound:
           path: /Audio/Ambience/Objects/fireplace.ogg
       - type: Anomaly
+        keepEntity: true
         corePrototype: AnomalyCorePyroclastic
       - type: PointLight
         radius: 1.3
