--- a/Resources/Prototypes/Entities/Mobs/NPCs/animals.yml
+++ b/Resources/Prototypes/Entities/Mobs/NPCs/animals.yml
@@ -3353,7 +3353,7 @@
   - type: MobThresholds
     thresholds:
       0: Alive
-      20: Critical
+      10: Critical
       20: Dead
   - type: MovementSpeedModifier
     baseWalkSpeed : 5
@@ -3362,6 +3362,8 @@
     states:
       Alive:
         Base: mouse-0
+      Critical:
+        Base: dead-0
       Dead:
         Base: splat-0
   - type: Extractable
@@ -3371,20 +3373,31 @@
       food:
         reagents:
         - ReagentId: UncookedAnimalProteins
-          Quantity: 2
+          Quantity: 3
   - type: Butcherable
     spawned:
-    - id: FoodMeatFish
+    - id: FoodMeatRat
       amount: 1
+  - type: ReplacementAccent
+    accent: mouse
   - type: Tag
     tags:
-    - VimPilot
     - Meat
+  - type: Barotrauma
+    damage:
+      types:
+        Blunt: 0.1
+  - type: Vocal
+    sounds:
+      Male: Mouse
+      Female: Mouse
+      Unsexed: Mouse
+    wilhelmProbability: 0.001
   # TODO: Remove CombatMode when Prototype Composition is added
   - type: CombatMode
     combatToggleAction: ActionCombatModeToggleOff
   - type: Bloodstream
-    bloodMaxVolume: 30
+    bloodMaxVolume: 50
   - type: MobPrice
     price: 50
   - type: BadFood
