--- a/Resources/Prototypes/Entities/Clothing/Hands/base_clothinghands.yml
+++ b/Resources/Prototypes/Entities/Clothing/Hands/base_clothinghands.yml
@@ -64,3 +64,25 @@
   - type: Tag
     tags:
     - Ring
+
+- type: entity
+  abstract: true
+  id: BaseGoldRing
+  components:
+    - type: PhysicalComposition
+      materialComposition:
+        Gold: 200 # 2 bars
+    - type: StaticPrice
+      price: 300
+
+- type: entity
+  abstract: true
+  id: BaseSilverRing
+  name: silver ring
+  description: Looks slightly less valuable than a gold one.
+  components:
+    - type: PhysicalComposition
+      materialComposition:
+        Silver: 200 # 2 bars
+    - type: StaticPrice
+      price: 275
