--- a/Resources/Prototypes/Entities/Structures/Specific/Anomaly/anomalies.yml
+++ b/Resources/Prototypes/Entities/Structures/Specific/Anomaly/anomalies.yml
@@ -893,7 +893,7 @@
         state: fire_eyes
       components:
       - type: Anomaly
-        keepEntity: true
+        deleteEntity: false
         corePrototype: AnomalyCorePyroclastic
       - type: PointLight
         radius: 1.3
@@ -919,3 +919,32 @@
         damage:
           types:
             Heat: 3
+
+- type: entity
+  name: test anom mine 2
+  parent: BaseLandMine
+  id: LandMineExplosiveANOM2
+  components:
+  - type: DeleteOnTrigger
+  - type: AddCompOnTrigger
+    toOther: true
+    components:
+    - type: InnerBodyAnomaly
+      startMessage: inner-anomaly-start-message-shock
+      layerSprite:
+        sprite: Structures/Specific/Anomalies/inner_anom_layer.rsi
+        state: shock_eyes
+      components:
+      - type: Anomaly
+        deleteEntity: false
+        corePrototype: AnomalyCoreElectricity
+      - type: PointLight
+        radius: 1.5
+        energy: 3.0
+        color: "#ffffaa"
+        castShadows: false
+      - type: ElectricityAnomaly
+      - type: DamageOnAttacked
+        damage:
+          types:
+            Shock: 3
