--- a/Resources/Prototypes/Entities/Objects/Tools/jetpacks.yml
+++ b/Resources/Prototypes/Entities/Objects/Tools/jetpacks.yml
@@ -212,7 +212,7 @@
     outputPressure: 42.6
     air:
       # 4 minutes of thrust
-      volume: .5
+      volume: 1.5
       temperature: 293.15
       moles:
         - 0.307706858 # oxygen
@@ -223,7 +223,7 @@
   id: JetpackSalvage
   parent: BaseJetpack
   name: salvage jetpack
-  description: It's a busted up jetpack. It should hold .4 L of gas, but only fills up halfway.
+  description: It's a busted up jetpack. It should hold 1 L of gas, but only fills up halfway.
   suffix: Empty
   components:
     - type: Item
@@ -240,7 +240,7 @@
     - type: GasTank
       outputPressure: 42.6
       air:
-        volume: .75
+        volume: .5
 
 # Filled salvage
 - type: entity
@@ -252,12 +252,12 @@
   - type: GasTank
     outputPressure: 42.6
     air:
-      # 30 seconds of thrust
+      # 1 minute of thrust
       volume: .5
       temperature: 293.15
       moles:
-        - 0.081027581 # oxygen
-        - 0.081027581 # nitrogen
+        - 0.102568952 # oxygen
+        - 0.102568952 # nitrogen
 
 #Empty security
 - type: entity
