--- a/Resources/Prototypes/Actions/station_ai.yml
+++ b/Resources/Prototypes/Actions/station_ai.yml
@@ -28,6 +28,7 @@
       - type: ShowJobIcons
       - type: ShowMindShieldIcons
       - type: ShowCriminalRecordIcons
+      #TODO: Add those in when theres no desync issue with ActionComponentChangeEvent
       #- type: ShowHealthBars
        # damageContainers:
         #- Biological
