--- a/Resources/Prototypes/Catalog/Jukebox/Standard.yml
+++ b/Resources/Prototypes/Catalog/Jukebox/Standard.yml
@@ -8,7 +8,7 @@
   id: Tintin
   name: Jeroen Tel - Tintin on the Moon
   path:
-    path: /Audio/Jukebox/title3.ogg
+    path: /Audio/Lobby/title3.ogg
 
 - type: jukebox
   id: Thunderdome
@@ -44,7 +44,7 @@
   id: AtomicAmnesia
   name: Phillip Dyer- Atomic Amnesia
   path:
-    path: /Audio/Jukebox/atomicamnesiammx.ogg
+    path: /Audio/Lobby/atomicamnesiammx.ogg
 
 - type: jukebox
   id: VibeAce
